--- a/Capstone_Project_wk_3c_Venv.ipynb
+++ b/Capstone_Project_wk_3c_Venv.ipynb
@@ -1572,7 +1572,7 @@
    ],
    "source": [
     "# create map of New York using latitude and longitude values\n",
-    "map_newyork = fol.Map(location=[latitude, longitude], zoom_start=10)\n",
+    "map_toronto = fol.Map(location=[latitude, longitude], zoom_start=10)\n",
     "\n",
     "# add markers to map\n",
     "for lat, lng, borough, neighborhood in zip(df_Toronto['Latitude'], df_Toronto['Longitude'], df_Toronto['Borough'], df_Toronto['Neighbourhood']):\n",
@@ -1586,9 +1586,9 @@
     "        fill=True,\n",
     "        fill_color='#3186cc',\n",
     "        fill_opacity=0.7,\n",
-    "        parse_html=False).add_to(map_newyork)  \n",
+    "        parse_html=False).add_to(map_toronto)  \n",
     "    \n",
-    "map_newyork"
+    "map_toronto"
    ]
   },
   {
